# python-docker

./: LICENSE-DEVCONTAINER  README.md  pyproject.toml  sitemap.xml
src/backend/: __init__.py  main.py
src/frontend/: __init__.py  app.py
