[project]
name = "default"
version = "0.1.0"
description = "This repository contains configurations to set up a Python development environment using VSCode's Dev Container feature. The environment includes uv and Ruff."

authors = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]
maintainers = [{ name = "a5chin", email = "a5chin.origin+contact@gmail.com" }]

requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "fastapi>=0.118.0",
    "google-cloud-logging>=3.11.3",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "plotly>=6.3.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.5",
    "scipy>=1.15.3",
    "streamlit>=1.49.1",
    "uvicorn>=0.37.0",
]

[tool.uv]
dev-dependencies = [
    "cookiecutter>=2.6.0",
    "cookiecutter-data-science>=2.1.0",
    "mkdocs-material>=9.5.50",
    "nox>=2025.5.1",
    "pre-commit>=4.1.0",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
